k8s/workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workers
  template:
    metadata:
      labels:
        app: workers
    spec:
      containers:
        - name: workers
          image: ghcr.io/marta77784/translation-notarization-service/workers:latest
---
apiVersion: v1
kind: Service
metadata:
  name: workers
spec:
  selector:
    app: workers
  ports:
    - port: 3002
      targetPort: 3002
