k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translation-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: "206.81.3.134"
      http:
        paths:
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3001
          - path: /api/notary
            pathType: Prefix
            backend:
              service:
                name: notarization-service
                port:
                  number: 3002
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
